<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012-2019 CNRS and University of Strasbourg
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">CEToolbox</string>
    <string name="MicroAmpere">μA</string>
    <string name="CapillaryLength">Capillary length</string>
    <string name="InsideDiameter">Inside diameter</string>
    <string name="Pressure">Pressure</string>
    <string name="Time">Time</string>
    <string name="DetectionTime">Detection time</string>
    <string name="Viscosity">Viscosity</string>
    <string name="Calculate">Calculate</string>
    <string name="Reset">Reset</string>
    <string name="toWindowLength">Length to window</string>
    <string name="Concentration">Concentration</string>
    <string name="MolecularWeight">Molecular weight</string>
    <string name="Voltage">Voltage</string>
    <string name="Centimeter">cm</string>
    <string name="Centipoid">cp</string>
    <string name="Micrometer">μm</string>
    <string name="Second">s</string>
    <string name="Minute">min</string>
    <string name="Gpermol">g/mol</string>
    <string name="Volt">V</string>
    <string name="ElectricCurrent">Electric current: </string>
    <string name="Conductivity">Conductivity</string>
    <string name="HydrodynamicInjection">Hydrodynamic injection: </string>
    <string name="CapillaryVolume">Capillary volume: </string>
    <string name="PlugLength">Plug (% of total length): </string>
    <string name="InjectedAnalyte">Injected analyte: </string>
    <string name="TimeToReplaceVolume">Time to replace 1 volume: </string>
    <string name="PlugLengthToWindow">Plug (% of length to window): </string>
    <string name="InjectionPressure">Injection pressure: </string>
    <string name="InjectionPlugLength">Injection plug length: </string>
    <string name="FlowRate">Flow rate: </string>
    <string name="FieldStrength">Field strength: </string>
    <string name="CapillaryToWindowVolume">Capillary volume to window: </string>
    <string name="ElectroOsmosisTime">Electro-osmosis time</string>
    <string name="LengthPerMinute">Length per minute: </string>
    <string name="MicroEOF">μEOF</string>
    <string name="About_title">CEToolbox</string>
    <string name="About_description">The Capillary Electrophoresis (CE) Toolbox is a software for computing
    Capillary Electrophoresis parameters developed by the <a href="https://complex-matter.unistra.fr/equipes-de-recherche/laboratoire-de-spectrometrie-de-masse-des-interactions-et-des-systemes/accueil/">LSMIS</a>
    and the <a href="http://www.iphc.cnrs.fr">IPHC</a> laboratories.</string>
    <string name="About_website">For more informations, visit the website: <a href="https://cetoolbox.github.io/">https://cetoolbox.github.io/</a></string>
    <string name="About_license">CEToolbox is
    licensed under the Apache License, Version 2.0. You may obtain a copy of the License at: <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">https://www.apache.org/licenses/LICENSE-2.0.txt</a></string>
    <string name="TimePeak1">Time peak 1</string>
    <string name="TimePeak2">Time peak 2</string>
    <string name="TimePeak3">Time peak 3</string>
    <string name="TimePeak4">Time peak 4</string>
    <string name="TimePeak5">Time peak 5</string>
    <string name="TimePeak6">Time peak 6</string>
    <string name="TimePeak7">Time peak 7</string>
    <string name="TimePeak8">Time peak 8</string>
    <string name="TimePeak9">Time peak 9</string>
    <string name="TimePeak10">Time peak 10</string>
    <string name="TimePeak11">Time peak 11</string>
    <string name="TimePeak12">Time peak 12</string>
    <string name="TimePeak13">Time peak 13</string>
    <string name="TimePeak14">Time peak 14</string>
    <string name="TimePeak15">Time peak 15</string>
    <string name="TimePeak16">Time peak 16</string>
    <string name="TimePeak17">Time peak 17</string>
    <string name="TimePeak18">Time peak 18</string>
    <string name="TimePeak19">Time peak 19</string>
    <string name="TimePeak20">Time peak 20</string>
    <string name="MicroEFF1">μEFF1</string>
    <string name="MicroEFF2">μEFF2</string>
    <string name="MicroEFF3">μEFF3</string>
    <string name="MicroEFF4">μEFF4</string>
    <string name="MicroEFF5">μEFF5</string>
    <string name="MicroEFF6">μEFF6</string>
    <string name="MicroEFF7">μEFF7</string>
    <string name="MicroEFF8">μEFF8</string>
    <string name="MicroEFF9">μEFF9</string>
    <string name="MicroEFF10">μEFF10</string>
    <string name="MicroEFF11">μEFF11</string>
    <string name="MicroEFF12">μEFF12</string>
    <string name="MicroEFF13">μEFF13</string>
    <string name="MicroEFF14">μEFF14</string>
    <string name="MicroEFF15">μEFF15</string>
    <string name="MicroEFF16">μEFF16</string>
    <string name="MicroEFF17">μEFF17</string>
    <string name="MicroEFF18">μEFF18</string>
    <string name="MicroEFF19">μEFF19</string>
    <string name="MicroEFF20">μEFF20</string>

</resources>
